2006-07-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably):  2.9.11. 

2006-07-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/stable.ihtml: use x86 for darwin intel URL.

2006-06-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): announce 2.9.10

2006-07-09  Graham Percival  <gpermus@gmail.com>

	* site/install/stable.ihtml: fixed link for OSX-x86 download.

2006-06-30  Jean-Charles  <lolyfan@wanadoo.fr>

	* site/switch/tour.html, fr/switch/tour.html: v2.7 -> v2.9 for
	links.
	* fr/about/automated-engraving/scoring-esthetics.html: layout bugfix

2006-06-26  John Mandereau  <john.mandereau@free.fr>

	* fr/<various files>: update translation.

2006-06-21  John Mandereau  <john.mandereau@free.fr>

	* fr/about/index.html: update image reference.

	* po/fr.po: update translation.

	* site/install/stable.ihtml, site/install/devel.ihtml: mark
	"Download the installer" and "Do %s in a command window" for
	translation.

	* site/about/automated-engraving/scoring-esthetics.html,
	site/about/automated-engraving/divide-and-conquer.html: add
	"Translation of CVS $Revision$" comment.

2006-06-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): oops. fix download links.

2006-06-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): announce 2.9.9

2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/index.html (href): add note about GUB source code.

2006-06-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): add link to changes.

2006-06-08  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): opps.

	* site/index.html: remove .ca mirror.

2006-06-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): change URL for new convention.

2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce regtesting results.
	announce 2.8.4
