@@ -28,6 +28,17 @@ on one day.
 !-->
 
 
+<dt><b>LilyPond 2.9.12 available</b> - <em>July 18, 2006</em>
+
+<dd>
+This release supports pdftex for lilypond-book, and uses PdfTeX for
+generating manuals, so page numbers and references are now clickable.
+(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>, <a
+href="install/#2.9">Download</a>)
+
+
+</dd>
+
 <dt><b>LilyPond 2.9.11 available</b> - <em>July 12, 2006</em>
 
 
@@ -45,13 +56,6 @@ href="install/#2.9">Download</a>)
 <dt><b>LilyPond 2.9.10 available</b> - <em>June 15, 2006</em>
 <dd>
 This releases fixes a couple of  bugs in 2.9.9. 
-(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
-<a href="install/#2.9">Download</a>)
-</dd>
-
-<dt><b>LilyPond 2.9.9 available</b> - <em>June 15, 2006</em>
-<dd>
-This releases fixes many bugs in 2.9.8 and earlier. 
 (<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
 <a href="install/#2.9">Download</a>)
 </dd>
