@@ -23,6 +23,15 @@
 
 
 
+
+<dt><b>LilyPond 2.9.9 available</b> - <em>June 15, 2006</em>
+<dd>
+This releases fixes many bugs in 2.9.8 and earlier. 
+(<a href="@DOC@v2.9/Documentation/topdocs/NEWS.html">Changes</a>,
+<a href="install/#2.9">Download</a>)
+</dd>
+
+
 <dt><b>LilyPond 2.9.8 available</b> - <em>June 6, 2006</em>
 
 <dd>
