@@ -1,3 +1,7 @@
+2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* site/news.ihtml (Preferably): 2.9.12
+
 2006-07-12  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (Preferably):  2.9.11. 
